// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconAvatar Snapshot - different sizes 1`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f1-border-secondary h-6 w-6 rounded-sm"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="100%"
    bbWidth="100%"
    className="shrink-0 w-4 h-4 stroke-sm text-f1-foreground-secondary"
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGCircle
        cx={12}
        cy={12}
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
          ]
        }
        r={8}
        stroke={
          {
            "type": 2,
          }
        }
      />
      <RNSVGPath
        d="m17.5 6.5-11 11M17.5 17.5l-11-11"
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinejoin={1}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IconAvatar Snapshot - different sizes 2`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f1-border-secondary h-9 w-9 rounded-md"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="100%"
    bbWidth="100%"
    className="shrink-0 w-5 h-5 stroke-md text-f1-foreground-secondary"
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGCircle
        cx={12}
        cy={12}
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
          ]
        }
        r={8}
        stroke={
          {
            "type": 2,
          }
        }
      />
      <RNSVGPath
        d="m17.5 6.5-11 11M17.5 17.5l-11-11"
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinejoin={1}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IconAvatar Snapshot - different sizes 3`] = `
<View
  className="flex aspect-square items-center justify-center border border-solid border-f1-border-secondary h-10 w-10 rounded-lg"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight="100%"
    bbWidth="100%"
    className="shrink-0 w-6 h-6 stroke-lg text-f1-foreground-secondary"
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": "100%",
          "width": "100%",
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
        ]
      }
    >
      <RNSVGCircle
        cx={12}
        cy={12}
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
          ]
        }
        r={8}
        stroke={
          {
            "type": 2,
          }
        }
      />
      <RNSVGPath
        d="m17.5 6.5-11 11M17.5 17.5l-11-11"
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
        propList={
          [
            "stroke",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "type": 2,
          }
        }
        strokeLinejoin={1}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
